<resources>
    <string name="app_name">Olim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_tasks">Tasks</string>
    <string name="navigation_drawer_tags">Tags</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_signout">Sign out</string>
    <string name="navigation_drawer_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="please_wait">Please wait…</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="full_name">Full name</string>
    <string name="today">Today</string>
    <string name="overdue">Overdue</string>
    <string name="postpone_all">Postpone all</string>
    <string name="done_all">Mark all as done</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="inTheNextSevenDays">In the next 7 days</string>
    <string name="later">Later</string>
    <string name="no_task_yet">No task, yet</string>
    <string name="nothing_to_do">Nothing to do</string>
    <string name="add_a_new_task">Add a new task tommorrow at 8pm...</string>
    <string name="new_todo">New task</string>
    <string name="new_task">New task</string>
    <string name="date">Date</string>
    <string name="add_note">Add a new task</string>
    <string name="add_a_task">Add a new task</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_tag">No tag</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="clear">Clear</string>
    <string name="filter_with_tag">Filter by tag</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="tagTitle">Tag title</string>
    <string name="tagComments">Comments</string>
    <string name="tagName">Name</string>
    <string name="tagColor">Color</string>
    <string name="tagIcon">Icon</string>
    <string name="delete">Delete</string>
    <string name="delete_tag">Delete this tag?</string>
    <string name="cancel">Cancel</string>
    <string name="no_tag_yet">No tag, yet.</string>
    <string name="delete_task">Delete this task</string>
    <string name="taskTitle">Title</string>
    <string name="taskDueDate">Due date</string>
    <string name="taskTag">Tag</string>
    <string name="changeDate">Change date</string>
    <string name="changeDueDate">Change due date</string>
    <string name="changeDueTime">Change due time</string>
    <string name="changeTag">Change tag</string>
    <string name="title_activity_task">Task</string>
    <string name="change_tag">Change tag</string>
    <string name="create_tag">Create tag</string>
    <string name="sync">Sync</string>
    <string name="display_done">Display done tasks</string>
    <string name="display_done_summary">The tasks marked as done are still displayed if activated</string>
    <string name="pref_title_tasks_reminder_notifications">Tasks reminders notifications</string>
    <string name="navigation_drawer_about">About</string>
    <string name="app_description">Easily manage your tasks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome in Olim</string>
    <string name="google_connect_description">Just click the Sign in button to get started, you\'ll will be prompted for the Google account to use for data sync.</string>
    <string name="read_contacts">Read contacts</string>
    <string name="connected">Connected</string>
</resources>