<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_tasks"
            android:icon="@drawable/ic_done_all"
            android:title="@string/navigation_drawer_tasks" />
        <item
            android:id="@+id/navigation_drawer_tags"
            android:icon="@drawable/ic_label_outline"
            android:title="@string/navigation_drawer_tags" />
    </group>

    <item android:title="@string/navigation_drawer_account">
        <menu>
            <item
                android:id="@+id/navigation_drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/navigation_drawer_settings" />
            <item
                android:id="@+id/navigation_drawer_signout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/navigation_drawer_signout" />
        </menu>
    </item>

</menu>
